#391 Created maxCustomers input for the customer selector component

--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/discounts/discount-modal/template/price-product-discount-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/discounts/discount-modal/template/price-product-discount-modal.html
@@ -86,8 +86,8 @@
         <div class="col-xs-12">
             <customer-selector
                 (onCustomerAdded)="didAddCustomer($event)"
-                (onCustomerRemoved)="didRemoveCustomer($event)">
-
+                (onCustomerRemoved)="didRemoveCustomer($event)"
+                [maxCustomers]="maxCustomers">
             </customer-selector>
         </div>
     </div>
