--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/invoices-report/template/invoices-report.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/invoices-report/template/invoices-report.html
@@ -23,7 +23,18 @@
 						>
 					</th-date-picker>
 				</div>
-
+			</div>
+			<div class="row">
+				<div class="col-xs-12 col-md-6 form-group">
+					<label>{{ 'Select customers' | translate }}</label>
+					<customer-selector
+						(onCustomerAdded)="didAddCustomer($event)"
+						(onCustomerRemoved)="didRemoveCustomer($event)"
+						[maxCustomers]="maxCustomers">
+					</customer-selector>
+        		</div>
+			</div>
+			<div class="row">
 				<div class="col-xs-12 col-md-6 form-group">
 					<label>{{ 'File Format' | translate }}</label>
 					<report-output-format (onFormatSelected)="didSelectFormat($event)"></report-output-format>
