#293 Propagated the two decimal formatter pipe

--- a/assets/client/src/pages/internal/containers/common/inventory/add-on-products/pages/add-on-product-overview/template/add-on-product-overview.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/add-on-products/pages/add-on-product-overview/template/add-on-product-overview.html
@@ -9,7 +9,7 @@
 		<h1>{{addOnProductVM.addOnProduct.name}}</h1>
 	</div>
 	<div>
-		<small>{{addOnProductVM.ccy.nativeSymbol}} {{ addOnProductVM.addOnProduct.price | price }}</small>
+		<small>{{addOnProductVM.ccy.nativeSymbol}} {{ addOnProductVM.addOnProduct.price | twodecimalsprice }}</small>
 	</div>
 	<div>
 		<small>{{addOnProductVM.addOnProduct.notes}}</small>
