--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/add-on-products/template/price-product-edit-add-on-products-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/add-on-products/template/price-product-edit-add-on-products-section.html
@@ -6,7 +6,7 @@
 				<tbody class="input-group">
 					<tr *ngIf="didSelectBreakfast()">
 						<td>{{breakfastAopSnapshot.name}}</td>
-						<td>{{ccy.nativeSymbol}} {{breakfastAopSnapshot.price | price}}</td>
+						<td>{{ccy.nativeSymbol}} {{breakfastAopSnapshot.price | twodecimalsprice}}</td>
 						<td *ngIf="!readonly">
 							<a class="btn btn-xs" (click)="removeBreakfast()">
 								<i class="fa unitpal-font">\</i> {{ 'Remove' | translate }}
@@ -42,7 +42,7 @@
 							</div> 
 						</td>
 						<td>
-							{{ccy.nativeSymbol}} {{addOnProductItem.addOnProductSnapshot.price | price}}
+							{{ccy.nativeSymbol}} {{addOnProductItem.addOnProductSnapshot.price | twodecimalsprice}}
 						</td>
 						<td *ngIf="!readonly">
 							<a class="btn btn-xs" (click)="removeAddOnProductItemAtIndex(currentIndex)">
