--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/departures-pane/components/departure-item/template/departure-item.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/departures-pane/components/departure-item/template/departure-item.html
@@ -12,7 +12,7 @@
 		<div class="booking-quick-details" >
 			<div class="stats orange-color f-12">
 				<div *ngIf="departureItemVM.hasInvoice">
-					<span class="unitpal-font ellipsis-text f-12 p-r-6">-</span><span>{{departureItemVM.priceString}}</span>
+					<span class="unitpal-font ellipsis-text f-12 p-r-6">-</span><span>{{departureItemVM.totalPrice | twodecimalsprice}} {{departureItemVM.ccy}}</span>
 				</div>
 			</div>
 			<div class="other-details gray-color f-12" *ngIf="departureItemVM.hasBooking">
