--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-fill-details/components/template/new-booking-details-editor.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-fill-details/components/template/new-booking-details-editor.html
@@ -122,7 +122,7 @@
                 <div class="col-md-12 col-xs-12 form-group">
                     <label>{{ 'Travel Activity Type' | translate }}</label>
                     <div class="input-group">
-                        <select class="form-control" [ngModel]="travelActivityType" (ngModelChange)="setTravelActivityType($event)" name="travelActivityType">
+                        <select class="form-control travel-activity-type" [ngModel]="travelActivityType" (ngModelChange)="setTravelActivityType($event)" name="travelActivityType">
                             <option *ngFor="let travelActivityTypeOption of travelActivityTypeOptionList" [value]="travelActivityTypeOption.type">{{ travelActivityTypeOption.displayName | translate }}</option>
                         </select>
                     </div>
