--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/backup-report/template/settings-backup-report.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/backup-report/template/settings-backup-report.html
@@ -5,21 +5,13 @@
 				<h3>{{ 'BackUp Report' | translate }}</h3><small>{{ 'Contains the arrivals, in house guests and departures for today' | translate }}</small>
 			</label>
 			<hr>
-			<loading-component [isLoading]="isLoading"></loading-component>
+			
 			<div class="row">
-				<div class="col-xs-12 col-md-6 form-group">
-					<th-date-picker
-						[initialThDate]="date"
-						[label]="'Date'"
-						(didSelectThDate)="didSelectDate($event)"
-						>
-					</th-date-picker>
-				</div>
 				<div class="col-xs-12 col-md-6 form-group">
 					<label>{{ 'File Format' | translate }}</label>
 					<report-output-format (onFormatSelected)="didSelectFormat($event)"></report-output-format>
 				</div>
-				<div *ngIf="!isLoading" class="col-xs-12 col-md-offset-9 col-md-3">
+				<div class="col-xs-12 col-md-offset-9 col-md-3">
 					<a class="btn btn-primary btn-block" [href]="reportCSVUrl()" target="_blank">{{ 'Generate' | translate }}</a>
 				</div>
 			</div>
