--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/monthly-stats-report/template/settings-monthly-stats-report.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/monthly-stats-report/template/settings-monthly-stats-report.html
@@ -2,7 +2,7 @@
 	<div class="row basic-info-form">
 		<div class="col-xs-12 col-md-6">
 			<label class="control-label">
-				<h3>{{ 'General Stats Report' | translate }}</h3><small>{{ 'Contains general hotel stats' | translate }}</small>
+				<h3>{{ 'Monthly Stats Report' | translate }}</h3><small>{{ 'Contains general hotel stats' | translate }}</small>
 			</label>
 			<hr>
 			<loading-component [isLoading]="isLoading"></loading-component>
