--- a/ansible/roles/nginx/templates/unitpal.j2
+++ b/ansible/roles/nginx/templates/unitpal.j2
@@ -19,5 +19,9 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        proxy_connect_timeout       300;
+        proxy_send_timeout          300;
+        proxy_read_timeout          300;
+        send_timeout                300;
     }
 }
