[HotFix] Updated js and css versions

--- a/views/internal.ejs
+++ b/views/internal.ejs
@@ -81,7 +81,7 @@
 		<script>
 			var enableAngularProdMode = true;
 		</script>
-		<script src="/client/build/unitpal-internal-1.0.76.min.js"></script>
+		<script src="/client/build/unitpal-internal-77.min.js"></script>
 	<%}%>
 
 </body>
